# twomates-backend

./: README.md  pyproject.toml  scratch_file.json
http/: order-1-forwarding.http-request  order-1.http-request  order-1.json  order_1_content.json
http/orders/: order-1-forwarding.http-request  order-1-printful.http-request  order_1_content.json
http/products/: products-forwarder.http-request
twomates_backend/: config.py  manage.py
twomates_backend/forward_order/: apps.py  views.py
twomates_backend/forwarder/: apps.py  views.py
twomates_backend/order_mockup/: apps.py  views.py
twomates_backend/twomates_backend/: asgi.py  settings.py  urls.py  wsgi.py
