[tool.poetry]
name = "twomates-backend"
version = "0.1.0"
description = ""
authors = ["Sander Nordeide <nordeidesander@gmail.com>"]
readme = "README.md"
packages = [{include = "twomates_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
